--- a/css/blocks/headers.css
+++ b/css/blocks/headers.css
@@ -9,13 +9,73 @@ li a {
   display: block;
   padding: 16px;
   font-size: 18px;
-  font-weight: 800;
+  font-weight: 700;
   font-family: Arial, Helvetica, sans-serif;
   color: black;
   text-decoration: none;
 }
 
-input{
+li a:active{
+  color: #0079e4;
+}
+li a:hover{
+  color: #0079e4;
+}
+
+input[type="text"], input[type="button"] {
     font-family: Arial, Helvetica, sans-serif;
-    height: 50px;
+    height: 40px;
+    padding: 0 15px;
+    border-radius: 8px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+}
+
+/* Specifiek voor de tekst input */
+input[type="text"] {
+    width: 300px; /* Pas de breedte aan zoals nodig */
+    margin-right: 10px;
+}
+
+/* Specifiek voor de knop */
+input[type="button"] {
+    background-color: #0079e4;
+    color: white;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+input[type="button"]:hover {
+    background-color: #0056b3;
+}
+
+.contactbtn:hover {
+    background-color: #0056b3;
+}
+
+/* Formulier centreren */
+.search form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+
+.logoimg{
+  border-radius: 5px;
+}
+
+#cart,
+#contactbtn{
+  padding: 18px;
+  border-radius: 50px;
+  margin-left: 7px;
+  color: white;
+  background-color: #0079e4;
+}
+#cart:hover,
+#contactbtn:hover{
+  background-color: #0056b3;
 }
