--- a/css/blocks/headers.css
+++ b/css/blocks/headers.css
@@ -46,7 +46,7 @@ input[type="submit"] {
     transition: background-color 0.3s;
 }
 
-input[type="button"]:hover {
+input[type="submit"]:hover {
     background-color: #0056b3;
 }
 
